# startfast

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  make.bat  pyproject.toml  requirements-dev.txt  startproject.py
generators/: __init__.py  base_generator.py  config.py  project_generator.py  template_manager.py
generators/file_generators/: __init__.py  api_generator.py  auth_generator.py  celery_generator.py  config_generator.py  database_generator.py  docker_generator.py  docs_generator.py  environment_generator.py  main_app_generator.py  models_generator.py  monitoring_generator.py  requirements_generator.py  schemas_generator.py  services_generator.py  tests_generator.py  utils_generator.py
src/fast_starter/: __init__.py  cli.py  template_manager.py
src/fast_starter/core/: __init__.py  config.py
src/fast_starter/generators/: __init__.py  base_generator.py  project_generator.py  template_manager.py
src/fast_starter/generators/file_generators/: __init__.py  api_generator.py  auth_generator.py  celery_generator.py  config_generator.py  database_generator.py  docker_generator.py  docs_generator.py  main_app_generator.py  models_generator.py  monitoring_generator.py  requirements_generator.py  schemas_generator.py  services_generator.py  tests_generator.py  utils_generator.py
src/fast_starter/templates/fastapi/: README.md
src/startfast/: __init__.py  cli.py
src/startfast/core/: __init__.py  config.py
src/startfast/generators/: __init__.py  base_generator.py  project_generator.py
src/startfast/generators/file_generators/: __init__.py  api_generator.py  auth_generator.py  celery_generator.py  config_generator.py  database_generator.py  docker_generator.py  docs_generator.py  environment_generator.py  main_app_generator.py  models_generator.py  monitoring_generator.py  requirements_generator.py  services_generator.py  tests_generator.py
tests/: __init__.py  test_basic.py
